Link of TermsOfService to Teams
